--- a/changelog.txt
+++ b/changelog.txt
@@ -2,7 +2,8 @@
 Version: 0.0.7
 Date: 02. 04. 2019
   Bugfixes:
-    - Fixed fatal Lua error when encountering lab whose deletion was not registered callback---------------------------------------------------------------------------------------------------
+    - Fixed fatal Lua error when encountering lab whose deletion was not registered
+---------------------------------------------------------------------------------------------------
 Version: 0.0.6
 Date: 31. 03. 2019
   Changes:
