Worked around a potential issue with technologies that have no ingredients

--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,9 @@
 ---------------------------------------------------------------------------------------------------
+Version: 0.0.8
+Date: 10. 04. 2019
+  Bugfixes:
+    - Addressed potential issue with technologies that have no ingredients
+---------------------------------------------------------------------------------------------------
 Version: 0.0.7
 Date: 02. 04. 2019
   Bugfixes:
