--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,9 @@
 ---------------------------------------------------------------------------------------------------
+Version: 0.0.10
+Date: 12. 04. 2019
+  Changes:
+    - Log missing ingredient colours on load
+---------------------------------------------------------------------------------------------------
 Version: 0.0.9
 Date: 11. 04. 2019
   Changes:
