Four different light patterns

--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,9 @@
 ---------------------------------------------------------------------------------------------------
+Version: 0.1.0
+Date: 13. 04. 2019
+  Changes:
+    - Labs light up in patterns centered around the player
+---------------------------------------------------------------------------------------------------
 Version: 0.0.10
 Date: 12. 04. 2019
   Changes:
