--- a/changelog.txt
+++ b/changelog.txt
@@ -3,6 +3,7 @@ Version: 0.1.0
 Date: 13. 04. 2019
   Changes:
     - Labs light up in patterns centered around the player
+    - Updates are spread over 6 ticks instead of 5, slightly compensating for increased complexity
 ---------------------------------------------------------------------------------------------------
 Version: 0.0.10
 Date: 12. 04. 2019
