--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,9 @@
 ---------------------------------------------------------------------------------------------------
+Version: 0.1.1
+Date: 14. 04. 2019
+  Bugfixes:
+    - Fixed showModError being declared too late
+---------------------------------------------------------------------------------------------------
 Version: 0.1.0
 Date: 13. 04. 2019
   Changes:
