--- a/changelog.txt
+++ b/changelog.txt
@@ -1,8 +1,13 @@
 ---------------------------------------------------------------------------------------------------
+Version: 0.1.2
+Date: 14. 04. 2019
+  Bugfixes:
+    - Fixed a possible fatal error when light direction goes negative
+---------------------------------------------------------------------------------------------------
 Version: 0.1.1
 Date: 14. 04. 2019
   Bugfixes:
-    - Fixed showModError being declared too late
+    - Fixed error handling (errors would stop the game rather than showing a message)
 ---------------------------------------------------------------------------------------------------
 Version: 0.1.0
 Date: 13. 04. 2019
