--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,9 @@
 ---------------------------------------------------------------------------------------------------
+Version: 0.1.3
+Date: 14. 04. 2019
+  Changes:
+    - Colours for some of the Py mods (thanks wchristian)
+---------------------------------------------------------------------------------------------------
 Version: 0.1.2
 Date: 14. 04. 2019
   Bugfixes:
