Fixed fatal error when show_message() shouldn't be called

--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,9 @@
 ---------------------------------------------------------------------------------------------------
+Version: 0.1.4
+Date: 15. 04. 2019
+  Bugfixes:
+    - Only report errors in singleplayer (since messages don't work in multiplayer)
+---------------------------------------------------------------------------------------------------
 Version: 0.1.3
 Date: 14. 04. 2019
   Changes:
