Soft error when missing render objects

--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,9 @@
 ---------------------------------------------------------------------------------------------------
+Version: 0.1.5
+Date: 22. 04. 2019
+  Bugfixes:
+    - Handle missing render objects gracefully
+---------------------------------------------------------------------------------------------------
 Version: 0.1.4
 Date: 15. 04. 2019
   Bugfixes:
