More colour patterns

--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,9 @@
 ---------------------------------------------------------------------------------------------------
+Version: 0.1.6
+Date: 27. 04. 2019
+  Changes:
+    - Added more colour patterns
+---------------------------------------------------------------------------------------------------
 Version: 0.1.5
 Date: 22. 04. 2019
   Bugfixes:
