Handle case where an ingredient has a missing icon

--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,9 @@
 ---------------------------------------------------------------------------------------------------
+Version: 0.1.7
+Date: 28. 04. 2019
+  Bugfixes:
+    - Handle missing icons gracefully
+---------------------------------------------------------------------------------------------------
 Version: 0.1.6
 Date: 27. 04. 2019
   Changes:
