Only animate regular labs

--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,14 @@
 ---------------------------------------------------------------------------------------------------
+Version: 0.1.9
+Date: 03. 05. 2019
+  Changes:
+    - Only animate regular labs (ignore e.g. Space Exploration labs, or NPE lab)
+---------------------------------------------------------------------------------------------------
+Version: 0.1.8
+Date: 30. 04. 2019
+  Bugfixes:
+    - Fixed upgrading from very old versions of the mod
+---------------------------------------------------------------------------------------------------
 Version: 0.1.7
 Date: 28. 04. 2019
   Bugfixes:
