Support for ScienceCostTweaker (mexmer) labs

--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,9 @@
 ---------------------------------------------------------------------------------------------------
+Version: 0.1.10
+Date: 09. 05. 2019
+  Changes:
+    - Support for Science Cost Tweaker labs
+---------------------------------------------------------------------------------------------------
 Version: 0.1.9
 Date: 03. 05. 2019
   Changes:
