Bob's tech support

--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,9 @@
 ---------------------------------------------------------------------------------------------------
+Version: 0.1.11
+Date: 27. 05. 2019
+  Changes:
+    - Support for Bob's Tech labs
+---------------------------------------------------------------------------------------------------
 Version: 0.1.10
 Date: 09. 05. 2019
   Changes:
