Fixed startup error when no labs are recognised

--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,9 @@
 ---------------------------------------------------------------------------------------------------
+Version: 0.1.12
+Date: 27. 06. 2019
+  Fixes:
+    - Fixed a startup error when no labs had matching colours
+---------------------------------------------------------------------------------------------------
 Version: 0.1.11
 Date: 27. 05. 2019
   Changes:
