--- a/changelog.txt
+++ b/changelog.txt
@@ -1,6 +1,8 @@
 ---------------------------------------------------------------------------------------------------
 Version: 0.1.12
 Date: 27. 06. 2019
+  Changes:
+    - Support for Big Lab
   Fixes:
     - Fixed a startup error when no labs had matching colours
 ---------------------------------------------------------------------------------------------------
