--- a/changelog.txt
+++ b/changelog.txt
@@ -3,6 +3,7 @@ Version: 0.1.12
 Date: 27. 06. 2019
   Changes:
     - Support for Big Lab
+    - Support for Schall Machine Scaling
   Fixes:
     - Fixed a startup error when no labs had matching colours
 ---------------------------------------------------------------------------------------------------
