--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,9 @@
 ---------------------------------------------------------------------------------------------------
+Version: 0.1.15
+Date: 23. 12. 2019
+  Changes:
+    - Support Krastorio (thanks, nicolas-lang!)
+---------------------------------------------------------------------------------------------------
 Version: 0.1.14
 Date: 12. 10. 2019
   Changes:
