--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,10 @@
 ---------------------------------------------------------------------------------------------------
+Version: 0.1.16
+Date: 29. 12. 2019
+  Changes:
+    - Support for BetterFlasks
+    - Fixed potential desync due to changing data on load
+---------------------------------------------------------------------------------------------------
 Version: 0.1.15
 Date: 23. 12. 2019
   Changes:
