Fixed issue where missing colours left holes in arrays
https://mods.factorio.com/mod/DiscoScience/discussion/5e404ace86d5b9000c75723a

--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,9 @@
 ---------------------------------------------------------------------------------------------------
+Version: 0.18.1
+Date: XXXX
+  Fixes:
+    - Fixed an issue where partially unknown ingredient lists would cause a crash (thanks Hornwitser!)
+---------------------------------------------------------------------------------------------------
 Version: 0.18.0
 Date: 27. 01. 2020
   Changes:
