Load just in time to avoid unlinked globals from callbacks

--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,9 @@
 ---------------------------------------------------------------------------------------------------
+Version: 1.0.1
+Date: 25. 02. 2020
+  Fixes:
+    - Fixed an issue where remote calls in on_init would run into nil references
+---------------------------------------------------------------------------------------------------
 Version: 1.0.0
 Date: 14. 02. 2020
   Changes:
