--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,9 @@
 ---------------------------------------------------------------------------------------------------
+Version: 1.0.2
+Date: 06. 03. 2020
+  Fixes:
+    - Properly fixed on_init issue
+---------------------------------------------------------------------------------------------------
 Version: 1.0.1
 Date: 25. 02. 2020
   Fixes:
