Modified necessary files for compatibility with game version 1.1

--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,9 @@
 ---------------------------------------------------------------------------------------------------
+Version: 1.1.0
+Date: 24. 11. 2020
+  Changes:
+    - Bumped version and factorio_version to work with game version 1.1
+---------------------------------------------------------------------------------------------------
 Version: 0.18.1
 Date: XXXX
   Fixes:
