Use new lab glow graphics, and draw_as_glow
Removed lights entirely

--- a/changelog.txt
+++ b/changelog.txt
@@ -1,6 +1,8 @@
 ---------------------------------------------------------------------------------------------------
-Version: 1.1.0
+Version: 1.1.1
 Date: 29. 11. 2020
+  Changes:
+    - Remove lights, and add new additive glow from base mod
 ---------------------------------------------------------------------------------------------------
 Version: 1.0.2
 Date: 06. 03. 2020
