--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,9 @@
 ---------------------------------------------------------------------------------------------------
+Version: 1.1.2
+Date: 03. 03. 2021
+  Changes:
+    - Support for AbandonedRuins (requires version 1.1.4 of the mod)
+---------------------------------------------------------------------------------------------------
 Version: 1.1.1
 Date: 29. 11. 2020
   Changes:
