--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,9 @@
 ---------------------------------------------------------------------------------------------------
+Version: 1.1.3
+Date: 05. 03. 2021
+  Changes:
+    - Fixed issue when claiming non-lab entities in Ruins mod (thanks Deltaqyto!)
+---------------------------------------------------------------------------------------------------
 Version: 1.1.2
 Date: 03. 03. 2021
   Changes:
