--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,9 @@
 ---------------------------------------------------------------------------------------------------
+Version: 1.1.4
+Date: 04. 05. 2024
+  Changes:
+    - Support for multiple surfaces (thanks Hi-ImKyle!)
+---------------------------------------------------------------------------------------------------
 Version: 1.1.3
 Date: 05. 03. 2021
   Changes:
