Updated version and readme

--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,10 @@
 ---------------------------------------------------------------------------------------------------
+Version: 1.2.0
+Date: 08. 10. 2024
+  Changes:
+    - Support for 1.2 API Updates
+    - Colours updated for Space Age science packs
+---------------------------------------------------------------------------------------------------
 Version: 1.1.4
 Date: 04. 05. 2024
   Changes:
