--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,9 @@
 ---------------------------------------------------------------------------------------------------
+Version: 2.0.2
+Date: 08. 12. 2024
+  Changes:
+    - Changed prototype name to fix incompatibility with Developer Assistant mod
+---------------------------------------------------------------------------------------------------
 Version: 2.0.1
 Date: 12. 10. 2024
   Changes:
